--- a/estudos_css/Atividade1/estilo.css
+++ b/estudos_css/Atividade1/estilo.css
@@ -5,21 +5,20 @@
 }
 
 .container {
-    width: 100vw;
-    height: 100vh;
-    background: #6C7A89;
+    background: #E5E5E5;
 
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+     align-items: center;
 }
 
 .container_login {
-    width: 400px;
-    height: 400px;
-    background: #fff;
-    border-top: 5px solid #2A88C8;
+    background: #E5E5E5;
+}
+
+.container_img {
+    background: #E5E5E5;
 }
 
 h1 {
@@ -42,6 +41,28 @@ input {
     border: 0;
     padding: 0 12px;
     margin-bottom: 1rem;
+}
+
+.checkbox-area {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-inline: 10px;
+}
+
+input[type="checkbox"] {
+    width: 25px;
+    background-color: #f4f4f4;
+    border: 0;
+    box-sizing: border-box;
+
+    display: inline-block;
+    /* position: static;
+    width: 18px;
+    height: 18px;
+    left: 160px;
+    top: 521px;
+    border: 1px solid #000000; */
 }
 
 button {
