--- a/projeto-frontend/projeto.css
+++ b/projeto-frontend/projeto.css
@@ -1,5 +1,4 @@
 .Imagem1 { 
-    
     position: absolute;
     width: 154px;
     height: 55px;
@@ -14,13 +13,11 @@ h3 {
     height: 32px;
     left: 295px;
     top: 303px;
-
     font-family: 'Roboto Slab', serif;
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
     line-height: 32px;
-    /* identical to box height */
     color: #000000;
 }
 
@@ -30,91 +27,56 @@ h3 {
     height: 840px;
     left: 720px;
     top: 0px;
-
     background: url(image.png);
     opacity: 0.84;
 }
 
 checkbox {
-    /* Lembre de mim */
-
     position: absolute;
-    width: 119px;
+    width: 110px;
     height: 21px;
-    left: 183px;
-    top: 519px;
-
+    left: 160px;
+    top: 510px;
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-
     color: #000000;
 }  
 
 button {
-    /* Rectangle 3 */
-
     position: absolute;
     width: 340px;
     height: 56px;
     left: 160px;
     top: 580px;
-
-    background-color: #2A88C8;
+    background: #2A88C8;
     border-radius: 10px;
-}
-
-button {
-    /* Entrar */
-
-    position: absolute;
-    width: 49px;
-    height: 23.52px;
-    left: 306px;
-    top: 596.8px;
-
+    font-weight: 500;
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-
     color: #FFFFFF;
 }
 
-button {
-    position: absolute;
-    width: 340px;
-    height: 56px;
-    left: 160px;
-    top: 580px;
-
-    background: #2A88C8;
-    border-radius: 10px;
-}
-
 .line {
-    /* Desejo criar minha conta */
-
     position: absolute;
     width: 188px;
     height: 21px;
     left: 236px;
     top: 676px;
-
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
     line-height: 21px;
     text-align: center;
-
     color: #000000;
-
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -124,85 +86,65 @@ a {
 }
 
 #lembrete {
-    /* Lembre de mim */
     position: absolute;
     width: 119px;
     height: 21px;
     left: 183px;
     top: 519px;
-
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 13.5px;
     line-height: 21px;
     text-align: center;
-
     color: #000000;
 }
 
 #esqueci {
-    /* Esqueci minha senha */
-
     position: absolute;
     width: 163px;
     height: 21px;
     left: 337px;
     top: 519px;
-
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 13.5px;
     line-height: 21px;
     text-align: center;
-
     color: #000000;
-
 }
 
 #checkbox {
     box-sizing: border-box;
-
     position: absolute;
-    width: 18px;
-    height: 18px;
-    left: 160px;
+    width: 100px;
+    left: 120px;
     top: 521px;
-
     border: 1px solid #000000;
 }
 
 #email {
-    /* Email */
-
     position: absolute;
     width: 45px;
     height: 21px;
     left: 212px;
     top: 384px;
-
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     display: flex;
     align-items: center;
-
-    /* Gray Hard */
-
     color: #666360;
 }
 
 #senha {
-    /* Senha */
-
     position: absolute;
     width: 48px;
     height: 21px;
     left: 212px;
     top: 448px;
-
     font-family: 'Roboto Slab';
     font-style: normal;
     font-weight: 400;
@@ -210,9 +152,6 @@ a {
     line-height: 21px;
     display: flex;
     align-items: center;
-
-    /* Gray Hard */
-
     color: #666360;
 }
 
@@ -224,10 +163,8 @@ a {
 }
 
 .cadeado {
-    /* Vector */
     position: absolute;
     left: 10%;
     right: 10%;
     top: 62%;
 }
-
