--- a/pagina-linkedIn/linkedin.css
+++ b/pagina-linkedIn/linkedin.css
@@ -9,7 +9,6 @@ a {
     position: flex;
     flex-direction:column;
     align-items:flex-start;
-    font-family: 'Roboto Flex', sans-serif;
     font-weight: 400;
     font-size: 13.5px;
     line-height: 21px;
@@ -18,12 +17,18 @@ a {
     padding:80px;
 }
 
-h1 {
-    color: rgb(126, 69, 69);
-    font-size: 40px;
-    font-family: 'Roboto Slab';
+.logo {
+    position: flex;
+    margin-left: 5px;
 }
 
+h1 {
+    position: flex;
+    margin-left: 80px;
+    color: rgb(126, 69, 69);
+    font-size: 40px;
+}
+    
 #fname {
     position: flex;
     width: 340px;
@@ -33,13 +38,9 @@ h1 {
     background: #FFFFFF;
     border-radius: 5px;
     font-weight: 500;
-    font-family: 'Roboto Slab';
-    font-style: normal;
-    font-weight: 500;
     font-size: 16px;
     line-height: 1px;
     text-align: left;
-    color: #FFFFFF;
 }
 
 #lname {
@@ -50,24 +51,14 @@ h1 {
     top: 580px;
     background: #FFFFFF;
     border-radius: 5px;
-    font-weight: 500;
-    font-family: 'Roboto Slab';
-    font-style: normal;
-    font-weight: 500;
     font-size: 16px;
     line-height: 1px;
     text-align: left;
-    color: #2A88C8;
 }
 
 #esqueceu {
-    font-weight: 500;
-    font-family: 'Roboto Slab';
-    font-style: normal;
-    font-weight: 500;
+    padding: 1px;
     font-size: 16px;
-    line-height: 21px;
-    text-align: center;
     color: #2A88C8;
 }
 
@@ -75,24 +66,18 @@ button {
     position: flex;
     width: 340px;
     height: 56px;
-    left: 40px;
-    top: 580px;
     background: #2A88C8;
     border-radius: 30px;
-    font-weight: 500;
-    font-family: 'Roboto Slab';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 21px;
+    font-size: 20px;
     text-align: center;
     color: #FFFFFF;
+    border-color: #ffffff;
 }
 
 .imagem {
     position: absolute;
     left: 500px;
-    top: 0px;
+    top: 60px;
+    margin-left: 60px;
     background: url(image.png);
-    opacity: 0.84;
 }
