--- a/estudos_html/pages-profile/profile.css
+++ b/estudos_html/pages-profile/profile.css
@@ -1,18 +1,7 @@
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    color: white;
-}
-
 * {
     font-family: 'Open Sans', sans-serif;
-}
-#habilidades {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 0.5rem;
+    text-align: justify;
 }
 
 .profile-img {
@@ -21,35 +10,42 @@ a:hover {
     border-radius: 50%;
 }
 
+a {
+    text-decoration: none;
+    color: blue;
+}
+
+a:hover {
+    color: blue;
+}
+
 .header {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    margin-left: 10px;
     background-color: #5394f9;
-    border-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 30px;    
 }
 
-body {
-    margin: 0.0;
-}
-
-.table-skill {
-    margin: 0;
-       
+#habilidades {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .table-skill tr:hover {
     margin: 0;
     background-color: #9db9e7;
     color: #fff;
-       
 }
 
 .table-skill td,th {
     padding: 1vw;
     border-bottom-style: inset;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .table-skill th {
@@ -63,4 +59,35 @@ body {
     margin: 0;
     background-color: #5394f9;
     font-weight: bold;
+}
+
+form {
+    margin-left: 100px;
+    align-items: center;
+}
+
+.Orçamento {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#name {
+    position: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #dfdfdf;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: right;
+    height: 40px;
+    width: 340px;
+}
+
+#submit {
+    height: 40px;
+    font-size: 16px;
+    font-weight:bold;
 }
