--- a/estudos_css/Atividade2/estilo.css
+++ b/estudos_css/Atividade2/estilo.css
@@ -31,6 +31,11 @@ a {
     justify-content: center;
 }
 
+a:hover {
+    color: blue;
+    background-color: red;
+}
+
 .login-header{
     color:#5294F9;
 }
